--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/index.css">
   <title>Calculadora</title>
 </head>
+
 <body>
 
-    <div class="widget">
+  <div class="widget">
 
-      <article class="results">
-        <p class="final-score"></p>
-        <p class="display-operation"></p>
-      </article>
+    <article class="results">
+      <p class="final-score">600</p>
+      <p class="display-operation">400 + 200</p>
+    </article>
 
-      <article class="buttons">
-        <section class="1-fila fila">
-            <button class="btn">DEL</button>
-            <button class="btn">LOG</button>
-            <button class="btn">∞</button>
-            <button class="btn">%</button>
-        </section>
-        <section class="2-fila fila">
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn">x</button>
-        </section>
-        <section class="3-fila fila">
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">+</button>
-        </section>
-        <section class="4-fila fila">
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">-</button>
-        </section>
-        <section class="fila-5 fila">
-            <button class="btn btn-result">RESULT</button>
-            <button class="btn btn-0">0</button>
-            <button class="btn btn-coma">,</div>
-        </section>
-      </article>
+    <article class="buttons">
+      <section class="1-fila fila">
+        <button class="btn">DEL</button>
+        <button class="btn">LOG</button>
+        <button class="btn">∞</button>
+        <button class="btn">%</button>
+      </section>
+      <section class="2-fila fila">
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">3</button>
+        <button class="btn">x</button>
+      </section>
+      <section class="3-fila fila">
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">6</button>
+        <button class="btn">+</button>
+      </section>
+      <section class="4-fila fila">
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">9</button>
+        <button class="btn">-</button>
+      </section>
+      <section class="fila-5 fila">
+        <button class="btn btn-result">RESULT</button>
+        <button class="btn btn-0">0</button>
+        <button class="btn btn-coma">,
+  </div>
+  </section>
+  </article>
 
-    </div>
+  </div>
 
 </body>
+
 </html>
