añadi estilos a los botones y coloque una nueva tipografia

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="fila-5 fila">
         <button type="button" class="btn btn-result">RESULT</button>
         <button type="button" class="btn btn-0">0</button>
-        <button type="button" class="btn btn-coma">,
+        <button type="button" class="btn btn-coma">,</button>
   </div>
 </body>
 
