terminé de cerrar algunas etiquetas

--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
         <button type="button" class="btn">∞</button>
         <button type="button" class="btn">%</button>
       </section>
+
       <section class="2-fila fila">
         <button type="button" class="btn">1</button>
         <button type="button" class="btn">2</button>
         <button type="button" class="btn">3</button>
         <button type="button" class="btn">x</button>
       </section>
+
       <section class="3-fila fila">
         <button type="button" class="btn">4</button>
         <button type="button" class="btn">5</button>
         <button type="button" class="btn">6</button>
         <button type="button" class="btn">+</button>
       </section>
+
       <section class="4-fila fila">
         <button type="button" class="btn">7</button>
         <button type="button" class="btn">8</button>
@@ -45,7 +48,10 @@
         <button type="button" class="btn btn-result">RESULT</button>
         <button type="button" class="btn btn-0">0</button>
         <button type="button" class="btn btn-coma">,</button>
+      </section>
   </div>
+
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
