--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
 
     <article class="buttons">
       <section class="1-fila fila">
-        <button type="button" class="btn">DEL</button>
-        <button type="button" class="btn">LOG</button>
-        <button type="button" class="btn">∞</button>
-        <button type="button" class="btn">%</button>
+        <button type="button" data-option="del" class="btn">DEL</button>
+        <button type="button" data-option="log" class="btn">LOG</button>
+        <button type="button" data-option="infinity" class="btn">∞</button>
+        <button type="button" data-operation="porcent" class="btn">%</button>
       </section>
 
       <section class="2-fila fila">
-        <button type="button" class="btn">1</button>
-        <button type="button" class="btn">2</button>
-        <button type="button" class="btn">3</button>
-        <button type="button" class="btn">x</button>
+        <button type="button" class="btn" data-number="1">1</button>
+        <button type="button" class="btn" data-number="2">2</button>
+        <button type="button" class="btn" data-number="3">3</button>
+        <button type="button" class="btn" data-operation="multiply">x</button>
       </section>
 
       <section class="3-fila fila">
-        <button type="button" class="btn">4</button>
-        <button type="button" class="btn">5</button>
-        <button type="button" class="btn">6</button>
-        <button type="button" class="btn">+</button>
+        <button type="button" class="btn" data-number="4">4</button>
+        <button type="button" class="btn" data-number="5">5</button>
+        <button type="button" class="btn" data-number="6">6</button>
+        <button type="button" class="btn" data-operation="sum">+</button>
       </section>
 
       <section class="4-fila fila">
-        <button type="button" class="btn">7</button>
-        <button type="button" class="btn">8</button>
-        <button type="button" class="btn">9</button>
-        <button type="button" class="btn">-</button>
+        <button type="button" class="btn" data-number="7">7</button>
+        <button type="button" class="btn" data-number="8">8</button>
+        <button type="button" class="btn" data-number="9">9</button>
+        <button type="button" class="btn" data-operation="subtract">-</button>
       </section>
 
       <section class="fila-5 fila">
-        <button type="button" class="btn btn-result">RESULT</button>
-        <button type="button" class="btn btn-0">0</button>
-        <button type="button" class="btn btn-coma">,</button>
+        <button type="button" class="btn btn-result" data-operation="product">RESULT</button>
+        <button type="button" class="btn btn-0" data-number="0">0</button>
+        <button type="button" class="btn btn-coma" data-operation="float">,</button>
       </section>
   </div>
 
