números se muestran en pantalla

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="widget">
     <article class="results">
-      <p class="final-score">600</p>
+      <p class="final-score"></p>
       <p class="display-operation">400 + 200</p>
     </article>
 
