arregle es diseño de la pantalla para que no se desborden los numeros

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <button type="button" class="btn btn-0" data-number="0">0</button>
         <button type="button" class="btn btn-coma" data-operation="float">,</button>
       </section>
+      </article>
   </div>
 
   <script src="./js/index.js"></script>
