agregué más lógica a la calculadora

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <div class="widget">
     <article class="results">
       <p class="final-score"></p>
-      <p class="display-operation">400 + 200</p>
+      <p class="display-operation"></p>
     </article>
 
     <article class="buttons">
       <section class="1-fila fila">
         <button type="button" data-option="del" class="btn">DEL</button>
         <button type="button" data-option="log" class="btn">LOG</button>
-        <button type="button" data-option="infinity" class="btn">∞</button>
         <button type="button" data-operation="porcent" class="btn">%</button>
+        <button type="button" data-operation="divide" class="btn">/</button>
       </section>
 
       <section class="2-fila fila">
@@ -49,7 +49,7 @@
         <button type="button" class="btn btn-0" data-number="0">0</button>
         <button type="button" class="btn btn-coma" data-operation="float">,</button>
       </section>
-      </article>
+    </article>
   </div>
 
   <script src="./js/index.js"></script>
